# Italrecept

./: .gitignore  CMakeLists.txt  README.md
src/: alapanyag.cpp  alapanyag.h  gtest_lite.h  main.cpp  memtrace.cpp  memtrace.h  receptkonyv.cpp  receptkonyv.h  string.cpp  string.h  tarolok.cpp  tarolok.h  tesztek.cpp  tesztek.h
